# cortex

./: .gitignore  README.md  ipfs.js  package.json  ports.json
client/: package.json
client/public/: index.html
client/src/: App.js  App.tsx  index.css  index.js  index.tsx  route.ts
client/src/components/: Attest.tsx  Dashboard.tsx  NuCypher.tsx  Profile.tsx  ProfileCard.tsx  ProofCreator.tsx  SubmitAttestation.tsx  SubmitData.tsx  TorusLogin.js  YourProfile.tsx  index.css  login.html  login.js  logoGather.css  logoGather.js  submit-api.ts  torLog.js
client/src/config/: contract_registry.json
client/src/contracts/: Cortex.json  Migrations.json  MyStringStore.json
client/src/data/: Proof.ts  ServiceIds.tsx
client/src/util/: verifyProof.ts
contracts/: Cortex.sol  package.json  truffle-config.js
migrations/: 2_deploy_contracts.js
nucypher/: package.json  ports.json  pyproject.toml  run.sh
nucypher/lib/: util.js
nucypher/server/: proxy.js
nucypher/setup/: runner.js
server/: default.nix  pyproject.toml
server/server/: __init__.py  __main__.py  api.py  nuc.py  test.py
server/setup/: config.json  runner.js  server.js  util.js
